cores e spacers no fim da pagina (possivel bug de overflow)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -330,7 +330,7 @@ body{
 	position: relative;
 	/*height: 100vh;*/
 	height: 100vh;
-	background-color: whitesmoke;
+	background-color: var(--azulClaro);
 	color: white;
 	padding:0;
 	/*background-image: linear-gradient(white,white,rgba(97,189,228,.2),rgba(97,189,228,.2));*/
@@ -659,11 +659,43 @@ https://www.youtube.com/watch?v=8b2mTq0Xrtw&list=TLPQMDcwNjIwMjENJnFxijIxXQ&inde
 	transition: .3s;
 }*/
 
+.pre-footer{
+	display: flex;
+	background-image: linear-gradient(#f0f0f0,#FFF);
+	position: relative;
+	min-height: 40vh;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	z-index: -3;
+}
+/*
+.pre-footer .layer2{
+	background-image: url('../layer3.svg');
+	transform: rotate(180deg);
+	bottom: 0;
+}*/
+
+footer .layer2{
+	top: 0;
+	z-index: -1;
+	transform: scaleX(1.2) rotate(180deg) translateY(10vh);
+}
+
+.footer-container{
+	transform: translateY(10vh);
+	z-index: 10;
+
+}
+
 footer{
 	/*background-image: linear-gradient(rgba(43,86,131,.5),rgba(43,86,131,1),rgba(43,86,131,1));*/
-	background-color: var(--azulEscuro);
+	/*background-color: var(--azulEscuro);*/
 	color: white;
 	box-shadow: 0 -2px 25px 0 rgba(43,86,131,.4);
+	position: relative;
+	height: 40vh;
+	z-index: -2;
 }
 
 svg{
